	* Minotaurs respect Elbereth
	* Bones level tracking
	* Conduct: Racial armor tracking
	* extra AC point per worn piece of racial armor
	* Reduce occurrences of hint daemon to once per game
	* Automatically identify rings dropped into a sink when message is
	  shown
	* Allow stethoscopes to identify egg types (unless hallucinating)
	  (from SporkHack)

	* new branch:
	  - the Dragon Caves (from NetHack Brass R/S)

	* new dungeon features:
	  - muddy swamp (from NetHack Brass)

	* added items:
	  - chromatic dragon scales and scale mail

	* new monsters:
	  - chromatic dragons
	  - wax golems (providing candles as death drop) (from Slash'Em)

	* bug fixes:
	  - Draw health bar in inverse when color is disabled (reported by
	    Bernard Helyer)
	  - Warn atheist player when trying to offering the Amulet of Yendor
	  - Workaround for preventing the stairs to Vlad's tower appearing
	    in the wizard's tower

	* build fixes:
	  - Compilation failed on openSUSE when trying to link with curses but
	    tparm being present in ncurses (reported by Roger Koot)

2012-02-05  UnNetHack 3.6.1
	* Scatter contents of bag of holding explosion instead of
	  destroying it (from SporkHack)
	* Quest leaders can smash rocks when angry (from SporkHack)
	* Blackmarket shopkeeper can smash rocks when angry
	* Strength bonus for two-handed weaponry is doubled. (from SporkHack)
	* Tins made from giant turtles are delicious and nutritious (by Bernard Helyer)
	* Gauntlets of power give +7 damage bonus to differentiate
	  from 18/** (from SporkHack)

	* Win32:
	  - Standard Windows GUI bundled
	  - HTML dumps enabled

	* New option: bones: allow player control of loading bones (partly
	  from NAO)

	* user interface improvements:
	  - Monster Targeting v1.2 (by Pasi Kallinen)
	  - Changed 'C' to present a menu (from NAO)
	  - Hiding useless options in TTY mode
	  - Display items in inventory list

	* bug fixes:
	  - Fixed crash when player polyed into gold dragon because of wearing