@@ -11,6 +11,7 @@
 	  shown
 	* Allow stethoscopes to identify egg types (unless hallucinating)
 	  (from SporkHack)
+	* Reduce AC of dragon scales to 1 and dragon scale mails to 5
 
 	* new branch:
 	  - the Dragon Caves (from NetHack Brass R/S)
